# claude-notify

./: .gitignore  LICENSE  PLAN.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
public/: toast.html
scripts/windows/: claude-notify.ps1  claude-notify.sh
src/: main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: hooks.nsh
src-tauri/src/: focus.rs  hooks_setup.rs  lib.rs  main.rs  server.rs  settings.rs
src/components/: Settings.tsx  Toggle.tsx
src/hooks/: useSettings.ts
